@@ -113,7 +113,7 @@ public class GameManager {
 
 			AIBase[] players = new AIBase[2];
 			for (int i = 0; i < 2; i++) {
-				players[i] = (AIBase) cls[i].newInstance();
+				players[i] = (AIBase) cls[i].getDeclaredConstructor().newInstance();
 				String init = players[i].init(tt, stepLimit, w, h, v);
 				System.out.println(init);
 			}
